// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: default 1`] = `
{
  "config": {
    "description": "Standard improve pass — reflect, distill, consolidation (promotion plus the reviewed pair-pass retire/supersede proposals), and validation. Memory inference is listed below but only runs when experimental.improveAutonomy is set; improve-stage extract and proactive maintenance off.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "memoryInference": {
        "enabled": true,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "default",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: quick 1`] = `
{
  "config": {
    "description": "Reflect-only pass — no extract, distill, consolidate, or memoryInference.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": false,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "quick",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: thorough 1`] = `
{
  "config": {
    "description": "Everything default runs, plus a judged triage drain of the pending-proposal backlog (up to 25 accepts per run). Auto-accepts only when improve autonomy is enabled; otherwise proposals queue for review. Identical tuning to default; improve-stage extract and proactive maintenance stay off.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "memoryInference": {
        "enabled": true,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "promote",
        "enabled": true,
        "judgment": {
          "enabled": true,
        },
        "maxAcceptsPerRun": 25,
        "maxDiffLines": 200,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "thorough",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: consolidate 1`] = `
{
  "config": {
    "description": "Consolidation-only pass — merges, deduplicates, and prunes memories every 4h.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "maxChunkSize": 25,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": false,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": false,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "consolidate",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: catchup 1`] = `
{
  "config": {
    "description": "Manual catch-up — consolidation plus a judged triage drain (up to 100 accepts) with no interval minimum. Auto-accepts only when improve autonomy is enabled; otherwise proposals queue for review.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "maxChunkSize": 50,
        "minPoolSize": 0,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": false,
        "limit": 25,
      },
      "triage": {
        "applyMode": "promote",
        "enabled": true,
        "judgment": {
          "enabled": true,
        },
        "maxAcceptsPerRun": 100,
        "maxDiffLines": 200,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": false,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "catchup",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: reflect-distill 1`] = `
{
  "config": {
    "description": "Reflect + distill pass — reflect, distill, memoryInference, and proposal triage (promote); proactiveMaintenance/consolidate/extract off. Sync disabled: an interrupted run would otherwise leave an uncommitted backlog.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "requirePlannedRefs": false,
      },
      "extract": {
        "enabled": false,
        "minNewSessions": 1,
        "timeoutMs": 300000,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "memoryInference": {
        "enabled": true,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "promote",
        "enabled": true,
        "judgment": {
          "enabled": true,
        },
        "maxAcceptsPerRun": 15,
        "maxDiffLines": 200,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": false,
      },
    },
    "sync": {
      "enabled": false,
      "push": true,
    },
  },
  "name": "reflect-distill",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: proactive-maintenance 1`] = `
{
  "config": {
    "description": "Opt-in proactive-maintenance pass — reflect, distill, proposal triage (promote, high budget), and the proactive-maintenance lane (maxPerRun 100); consolidate/memoryInference/extract off. Sync disabled: an interrupted run would otherwise leave an uncommitted backlog.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": true,
        "maxPerRun": 100,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "promote",
        "enabled": true,
        "judgment": {
          "enabled": true,
        },
        "maxAcceptsPerRun": 100,
        "maxDiffLines": 200,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": false,
      },
    },
    "sync": {
      "enabled": false,
      "push": true,
    },
  },
  "name": "proactive-maintenance",
}
`;
